--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
